<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:importantForAccessibility="no"
        android:src="@drawable/img_logo"
        android:text="Hello World!"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/img_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="24dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="24dp"
            android:layout_marginHorizontal="16dp">
            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/conversor_de_moedas"
                android:textStyle="bold"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
            <TextView
                android:id="@+id/tvSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/digite_o_valor_e_escolha_as_moedas_de_conversao"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.0" />

            <LinearLayout
                android:id="@+id/llFromExchange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:weightSum="7"
                app:layout_constraintTop_toBottomOf="@+id/tvSubtitle"
                android:background="@drawable/bg_rounded_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:gravity="center"
                android:layout_marginTop="36dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:id="@+id/tvFromCurrencySymbol"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/etFromExchangeValue"
                        android:layout_width="match_parent"
                        android:minHeight="48dp"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:text="@string/initial_value"
                        android:background="@android:color/transparent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_divider" />

                <Spinner
                    android:id="@+id/spnFromCurrency"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    tools:listitem="@layout/item_currency_type"
                    android:background="@android:color/transparent" />


            </LinearLayout>

            <ImageView
                android:id="@+id/ivArrowsExchange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:src="@drawable/ic_arrows_exchange"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:padding="16dp"
                app:layout_constraintBottom_toTopOf="@id/llToExchange"
                app:layout_constraintTop_toBottomOf="@+id/llFromExchange" />

            <LinearLayout
                android:id="@+id/llToExchange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_rounded_content"
                android:orientation="horizontal"
                android:padding="8dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivArrowsExchange">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:id="@+id/tvToCurrencySymbol"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:textSize="16sp" />


                    <TextView
                        android:id="@+id/tvToExchangeValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:minHeight="48dp"
                        android:text="@string/initial_value"
                        />
                </LinearLayout>


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:importantForAccessibility="no"
                    android:src="@drawable/img_divider" />

                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:id="@+id/spnToCurrency"
                    tools:listitem="@layout/item_currency_type"
                    android:background="@android:color/transparent" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>